# rust-diesel-crud-example

./: .env.example  Cargo.toml  test.rest
migrations/2025-05-08-024501_create_posts/: up.sql
src/: handlers.rs  lib.rs  main.rs
src/config/: cfg_postgres.rs  mod.rs
src/db/: schema.rs
src/db/models/: posts.rs
src/services/: backpdf_queue_service.rs  mod.rs  posts.rs
