[package]
name = "actix-web-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.2"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "mysql",
] }
serde_json = "1.0.96"
dotenv = "0.15.0"
dotenvy = "0.15.6"
env_logger = "0.10.0"
actix-cors = "0.6.4"
serde = { version = "1.0.152", features = ["derive"] }
derive_more = { version = "0.99.17" }
r2d2 = "0.8.10"
rust-argon2 = "1.0.0"
futures = "0.3.28"
lazy_static = "1.4.0"
uuid = { version = "1.3.2" }
